# chatbot

./: README.md  index.html
backend/: connection_manager.py  inference.py  messaging_queue.py  pyproject.toml  server.py  start.sh  start_worker.sh
