[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ankitnimje977",email = "anksnim977@gmail.com"}
]
requires-python = ">=3.14,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "requests (>=2.34.2,<3.0.0)",
    "uvicorn[standard] (>=0.50.0,<0.51.0)",
    "ollama (>=0.6.2,<0.7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
